--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Portfolio | Firoz</title>
 </head>
 <body>
-    
+    <div class="container mx-auto bg-black">
+        <h3 class="uppercase text-center text-white">hello world</h3>
+    </div>
 </body>
 </html>
