header section created with dummy caption and buton and basic social media icons and also included fontawesome to the project

--- a/index.html
+++ b/index.html
@@ -1,14 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./build/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,400&family=Montserrat:wght@100;200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./build/css/cutom.css">
     <title>Portfolio | Firoz</title>
 </head>
-<body>
-    <div class="container mx-auto bg-black">
-        <h3 class="uppercase text-center text-white">hello world</h3>
-    </div>
+
+<body class="font-['Montserrat']">
+    <header class="bg-[url('/build/img/header.jpg')] bg-center bg-cover min-h-screen">
+        <div class="min-h-screen max-w-7xl mx-auto flex justify-center lg:justify-start p-5">
+            <div class="my-auto">
+                <div class="lg:grid grid-cols-2">
+                    <div>
+                        <h4 class="uppercase text-gray-600 font-semibold">WELCOME TO GLINT</h4>
+                        <h1 class="text-white text-5xl font-bold leading-snug mb-10">
+                            We are a creative group<br>
+                            of people who design
+                        </h1>
+                        <a href="#"
+                            class="capitalize text-white border-solid border py-3 px-6 hover:bg-blue-500 transition-all duration-150 ease-in-out hover:border-transparent">more
+                            about me</a>
+                    </div>
+                    <div class="text-end">
+                        <ul class="list-none">
+                            <li class="inline-block lg:block">
+                                <span>
+                                    <a href="#">
+                                        <i class="fa-brands fa-facebook-f text-white hover:text-blue-500 transition-all ease-in-out duration-150 text-2xl"></i>
+                                    </a>
+                                </span>
+                            </li>
+                            <li class="mt-4 inline-block lg:block ms-2">
+                                <span>
+                                    <a href="#">
+                                        <i class="fa-brands fa-x-twitter text-white hover:text-blue-500 transition-all ease-in-out duration-150 text-2xl"></i>
+                                    </a>
+                                </span>
+                            </li>
+                            <li class="mt-4 inline-block lg:block ms-2">
+                                <span>
+                                    <a href="#">
+                                        <i class="fa-brands fa-instagram text-white hover:text-blue-500 transition-all ease-in-out duration-150 text-2xl"></i>
+                                    </a>
+                                </span>
+                            </li>
+                            <li class="mt-4 inline-block lg:block ms-2">
+                                <span>
+                                    <a href="#">
+                                        <i class="fa-brands fa-behance text-white hover:text-blue-500 transition-all ease-in-out duration-150 text-2xl"></i>
+                                    </a>
+                                </span>
+                            </li>
+                            <li class="mt-4 inline-block lg:block ms-2">
+                                <span>
+                                    <a href="#">
+                                        <i class="fa-brands fa-dribbble text-white hover:text-blue-500 transition-all ease-in-out duration-150 text-2xl"></i>
+                                    </a>
+                                </span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
+
 </html>
