portfolio introduction section created wth dummy contents

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,400&family=Montserrat:wght@100;200;300;400;500;600;700&display=swap"
         rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,400&family=Lora&family=Montserrat:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./build/css/cutom.css">
     <title>Portfolio | Firoz</title>
 </head>
@@ -72,6 +73,43 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="py-32 bg-green-500">
+            <div class="max-w-7xl mx-auto">
+                <h4 class="uppercase text-black text-center font-bold">hello there</h4>
+                <h1 class="text-center text-white text-6xl font-bold capitalize mt-4">I'm Firoz</h1>
+                <p class="font-[Lora] text-xl leading-loose text-center mt-10">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt.
+                </p>
+                <div class="sm:grid grid-cols-4 p-5 text-center mt-10">
+                    <div class="md:border-e border-e-gray-300 border-solid border-white">
+                        <li class="list-none">
+                            <i class="fa-solid fa-location-dot text-white text-5xl"></i>
+                            <h4 class="font-bold text-black mt-5">Kannur,Kerala</h4>
+                        </li>
+                    </div>
+                    <div class="md:border-e border-e-gray-300 border-solid border-white mt-4 md:mt-0">
+                        <li class="list-none">
+                            <i class="fa-solid fa-phone text-white text-5xl"></i>
+                            <h4 class="font-bold text-black mt-5">+91 9876543210</h4>
+                        </li>
+                    </div>
+                    <div class="md:border-e border-e-gray-300 border-solid border-white mt-4 md:mt-0">
+                        <li class="list-none">
+                            <i class="fa-solid fa-envelope text-white text-5xl"></i>
+                            <h4 class="font-bold text-black mt-5">example@mail.com</h4>
+                        </li>
+                    </div>
+                    <div class="mt-4 md:mt-0">
+                        <li class="list-none">
+                            <i class="fa-brands fa-linkedin text-white text-5xl"></i>
+                            <h4 class="font-bold text-black mt-5">linked in username</h4>
+                        </li>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
