--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
         </div>
     </header>
     <main>
+        <!--INTRODUCTION-->
         <section class="py-32 bg-green-500">
-            <div class="max-w-7xl mx-auto">
+            <div class="max-w-7xl mx-auto p-5">
                 <h4 class="uppercase text-black text-center font-bold">hello there</h4>
                 <h1 class="text-center text-white text-6xl font-bold capitalize mt-4">I'm Firoz</h1>
                 <p class="font-[Lora] text-xl leading-loose text-center mt-10">
@@ -105,6 +106,96 @@
                             <i class="fa-brands fa-linkedin text-white text-5xl"></i>
                             <h4 class="font-bold text-black mt-5">linked in username</h4>
                         </li>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--WHAT I DO-->
+        <section class="py-32">
+            <div class="max-w-7xl mx-auto p-5">
+                <h4 class="uppercase text-green-500 text-center font-bold">what i do</h4>
+                <h1 class="text-center text-black text-5xl font-semibold capitalize mt-4 leading-tight">We’ve got everything you need to <br>launch and grow your business</h1>
+                <div class="mt-32">
+                    <div class="md:grid md:grid-cols-2 gap-x-32 gap-y-10">
+                        <div>
+                            <div class="flex">
+                                <div>
+                                    <i class="fa-solid fa-camera text-green-500 text-5xl"></i>
+                                </div>
+                                <div>
+                                    <h3 class="text-black font-semibold text-3xl ms-10 capitalize">photography</h3>
+                                    <p class="font-[Lora] text-base leading-loose text-start ms-10 mt-10 text-gray-500">
+                                        Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="flex mt-10 md:mt-0">
+                                <div>
+                                    <i class="fa-solid fa-video text-green-500 text-5xl"></i>
+                                </div>
+                                <div>
+                                    <h3 class="text-black font-semibold text-3xl ms-10 capitalize">videography</h3>
+                                    <p class="font-[Lora] text-base leading-loose text-start ms-10 mt-10 text-gray-500">
+                                        Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="flex mt-10 md:mt-0">
+                                <div>
+                                    <i class="fa-solid fa-camera text-green-500 text-5xl"></i>
+                                </div>
+                                <div>
+                                    <h3 class="text-black font-semibold text-3xl ms-10 capitalize">photography</h3>
+                                    <p class="font-[Lora] text-base leading-loose text-start ms-10 mt-10 text-gray-500">
+                                        Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="flex mt-10 md:mt-0">
+                                <div>
+                                    <i class="fa-solid fa-video text-green-500 text-5xl"></i>
+                                </div>
+                                <div>
+                                    <h3 class="text-black font-semibold text-3xl ms-10 capitalize">videography</h3>
+                                    <p class="font-[Lora] text-base leading-loose text-start ms-10 mt-10 text-gray-500">
+                                        Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="flex mt-10 md:mt-0">
+                                <div>
+                                    <i class="fa-solid fa-camera text-green-500 text-5xl"></i>
+                                </div>
+                                <div>
+                                    <h3 class="text-black font-semibold text-3xl ms-10 capitalize">photography</h3>
+                                    <p class="font-[Lora] text-base leading-loose text-start ms-10 mt-10 text-gray-500">
+                                        Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="flex mt-10 md:mt-0">
+                                <div>
+                                    <i class="fa-solid fa-video text-green-500 text-5xl"></i>
+                                </div>
+                                <div>
+                                    <h3 class="text-black font-semibold text-3xl ms-10 capitalize">videography</h3>
+                                    <p class="font-[Lora] text-base leading-loose text-start ms-10 mt-10 text-gray-500">
+                                        Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
