testimonial section created

--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,400&family=Montserrat:wght@100;200;300;400;500;600;700&display=swap"
         rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,400&family=Lora&family=Montserrat:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,400&family=Lora&family=Montserrat:wght@100;200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./build/css/cutom.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
     <title>Portfolio | Firoz</title>
 </head>
 
@@ -35,35 +41,40 @@
                             <li class="inline-block lg:block">
                                 <span>
                                     <a href="#">
-                                        <i class="fa-brands fa-facebook-f text-white hover:text-blue-500 transition-all ease-in-out duration-150 text-2xl"></i>
+                                        <i
+                                            class="fa-brands fa-facebook-f text-white hover:text-blue-500 transition-all ease-in-out duration-150 text-2xl"></i>
                                     </a>
                                 </span>
                             </li>
                             <li class="mt-4 inline-block lg:block ms-2">
                                 <span>
                                     <a href="#">
-                                        <i class="fa-brands fa-x-twitter text-white hover:text-blue-500 transition-all ease-in-out duration-150 text-2xl"></i>
+                                        <i
+                                            class="fa-brands fa-x-twitter text-white hover:text-blue-500 transition-all ease-in-out duration-150 text-2xl"></i>
                                     </a>
                                 </span>
                             </li>
                             <li class="mt-4 inline-block lg:block ms-2">
                                 <span>
                                     <a href="#">
-                                        <i class="fa-brands fa-instagram text-white hover:text-blue-500 transition-all ease-in-out duration-150 text-2xl"></i>
+                                        <i
+                                            class="fa-brands fa-instagram text-white hover:text-blue-500 transition-all ease-in-out duration-150 text-2xl"></i>
                                     </a>
                                 </span>
                             </li>
                             <li class="mt-4 inline-block lg:block ms-2">
                                 <span>
                                     <a href="#">
-                                        <i class="fa-brands fa-behance text-white hover:text-blue-500 transition-all ease-in-out duration-150 text-2xl"></i>
+                                        <i
+                                            class="fa-brands fa-behance text-white hover:text-blue-500 transition-all ease-in-out duration-150 text-2xl"></i>
                                     </a>
                                 </span>
                             </li>
                             <li class="mt-4 inline-block lg:block ms-2">
                                 <span>
                                     <a href="#">
-                                        <i class="fa-brands fa-dribbble text-white hover:text-blue-500 transition-all ease-in-out duration-150 text-2xl"></i>
+                                        <i
+                                            class="fa-brands fa-dribbble text-white hover:text-blue-500 transition-all ease-in-out duration-150 text-2xl"></i>
                                     </a>
                                 </span>
                             </li>
@@ -80,7 +91,11 @@
                 <h4 class="uppercase text-black text-center font-bold">hello there</h4>
                 <h1 class="text-center text-white text-6xl font-bold capitalize mt-4">I'm Firoz</h1>
                 <p class="font-[Lora] text-xl leading-loose text-center mt-10">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia deserunt.
                 </p>
                 <div class="sm:grid grid-cols-4 p-5 text-center mt-10">
                     <div class="md:border-e border-e-gray-300 border-solid border-white">
@@ -115,7 +130,8 @@
         <section class="py-32">
             <div class="max-w-7xl mx-auto p-5">
                 <h4 class="uppercase text-green-500 text-center font-bold">what i do</h4>
-                <h1 class="text-center text-black text-5xl font-semibold capitalize mt-4 leading-tight">We’ve got everything you need to <br>launch and grow your business</h1>
+                <h1 class="text-center text-black text-5xl font-semibold capitalize mt-4 leading-tight">We’ve got
+                    everything you need to <br>launch and grow your business</h1>
                 <div class="mt-32">
                     <div class="md:grid md:grid-cols-2 gap-x-32 gap-y-10">
                         <div>
@@ -126,7 +142,10 @@
                                 <div>
                                     <h3 class="text-black font-semibold text-3xl ms-10 capitalize">photography</h3>
                                     <p class="font-[Lora] text-base leading-loose text-start ms-10 mt-10 text-gray-500">
-                                        Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                                        Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum
+                                        laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut.
+                                        Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse
+                                        soluta sint.
                                     </p>
                                 </div>
                             </div>
@@ -139,7 +158,10 @@
                                 <div>
                                     <h3 class="text-black font-semibold text-3xl ms-10 capitalize">videography</h3>
                                     <p class="font-[Lora] text-base leading-loose text-start ms-10 mt-10 text-gray-500">
-                                        Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                                        Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum
+                                        laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut.
+                                        Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse
+                                        soluta sint.
                                     </p>
                                 </div>
                             </div>
@@ -152,7 +174,10 @@
                                 <div>
                                     <h3 class="text-black font-semibold text-3xl ms-10 capitalize">photography</h3>
                                     <p class="font-[Lora] text-base leading-loose text-start ms-10 mt-10 text-gray-500">
-                                        Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                                        Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum
+                                        laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut.
+                                        Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse
+                                        soluta sint.
                                     </p>
                                 </div>
                             </div>
@@ -165,7 +190,10 @@
                                 <div>
                                     <h3 class="text-black font-semibold text-3xl ms-10 capitalize">videography</h3>
                                     <p class="font-[Lora] text-base leading-loose text-start ms-10 mt-10 text-gray-500">
-                                        Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                                        Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum
+                                        laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut.
+                                        Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse
+                                        soluta sint.
                                     </p>
                                 </div>
                             </div>
@@ -178,7 +206,10 @@
                                 <div>
                                     <h3 class="text-black font-semibold text-3xl ms-10 capitalize">photography</h3>
                                     <p class="font-[Lora] text-base leading-loose text-start ms-10 mt-10 text-gray-500">
-                                        Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                                        Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum
+                                        laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut.
+                                        Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse
+                                        soluta sint.
                                     </p>
                                 </div>
                             </div>
@@ -191,7 +222,10 @@
                                 <div>
                                     <h3 class="text-black font-semibold text-3xl ms-10 capitalize">videography</h3>
                                     <p class="font-[Lora] text-base leading-loose text-start ms-10 mt-10 text-gray-500">
-                                        Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                                        Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum
+                                        laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut.
+                                        Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse
+                                        soluta sint.
                                     </p>
                                 </div>
                             </div>
@@ -200,7 +234,71 @@
                 </div>
             </div>
         </section>
+
+        <section class="relative">
+            <div class="py-32 bg-gray-900">
+                <div class="max-w-7xl mx-auto p-5">
+                    <h4 class="uppercase text-green-500 text-center font-bold">what i do</h4>
+                    <h1 class="text-center text-white text-5xl font-semibold capitalize mt-4">We love what we do, check
+                        out some of our latest works</h1>
+                </div>
+            </div>
+            <!--GALLERY-->
+            <div class="bg-yellow-400 absolute bottom-0 start-1/2 -translate-x-1/2 -translate-y-1/2">
+                <div class="max-w-7xl mx-auto">
+                    <img src="./build/img/header.jpg" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section class="py-32 bg-gray-300">
+            <div class="max-w-7xl mx-auto p-5 my-auto">
+                <h4 class="uppercase text-green-500 text-center font-bold">my client words</h4>
+                <h1 class="text-center text-black text-5xl font-semibold capitalize mt-4">Glint has been honored to
+                    partner up with these clients</h1>
+                <div class="owl-carousel text-center mt-20">
+                    <div>
+                        <p class="font-[Lora] text-2xl leading-loose ms-10 mt-10 text-gray-600">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor fugit quisquam porro rem dolorem. Ipsum adipisci ut harum, vel obcaecati delectus labore necessitatibus molestiae tenetur fugit vero sed accusamus beatae.
+                        </p>
+                        <h4 class="font-bold mt-10">&mdash; Name of writter &mdash;</h4>
+                    </div>
+                    <div>
+                        <p class="font-[Lora] text-2xl leading-loose ms-10 mt-10 text-gray-600">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor fugit quisquam porro rem dolorem. Ipsum adipisci ut harum, vel obcaecati delectus labore necessitatibus molestiae tenetur fugit vero sed accusamus beatae.
+                        </p>
+                        <h4 class="font-bold mt-10">&mdash; Name of writter &mdash;</h4>
+                    </div>
+                    <div>
+                        <p class="font-[Lora] text-2xl leading-loose ms-10 mt-10 text-gray-600">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor fugit quisquam porro rem dolorem. Ipsum adipisci ut harum, vel obcaecati delectus labore necessitatibus molestiae tenetur fugit vero sed accusamus beatae.
+                        </p>
+                        <h4 class="font-bold mt-10">&mdash; Name of writter &mdash;</h4>
+                    </div>
+                    <div>
+                        <p class="font-[Lora] text-2xl leading-loose ms-10 mt-10 text-gray-600">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor fugit quisquam porro rem dolorem. Ipsum adipisci ut harum, vel obcaecati delectus labore necessitatibus molestiae tenetur fugit vero sed accusamus beatae.
+                        </p>
+                        <h4 class="font-bold mt-10">&mdash; Name of writter &mdash;</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $(".owl-carousel").owlCarousel({
+                autoplay: true,
+                loop: true,
+                margin: 10,
+                autoplayTimeout:3000,
+                autoplayHoverPause:true,
+                items: 1
+            });
+        });
+    </script>
 </body>
 
 </html>
