contact section created

--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
             </div>
         </section>
 
+        <!--TESTIMONIAL-->
         <section class="py-32 bg-gray-300">
             <div class="max-w-7xl mx-auto p-5 my-auto">
                 <h4 class="uppercase text-green-500 text-center font-bold">my client words</h4>
@@ -259,27 +260,129 @@
                 <div class="owl-carousel text-center mt-20">
                     <div>
                         <p class="font-[Lora] text-2xl leading-loose ms-10 mt-10 text-gray-600">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor fugit quisquam porro rem dolorem. Ipsum adipisci ut harum, vel obcaecati delectus labore necessitatibus molestiae tenetur fugit vero sed accusamus beatae.
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor fugit quisquam porro rem
+                            dolorem. Ipsum adipisci ut harum, vel obcaecati delectus labore necessitatibus molestiae
+                            tenetur fugit vero sed accusamus beatae.
                         </p>
                         <h4 class="font-bold mt-10">&mdash; Name of writter &mdash;</h4>
                     </div>
                     <div>
                         <p class="font-[Lora] text-2xl leading-loose ms-10 mt-10 text-gray-600">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor fugit quisquam porro rem dolorem. Ipsum adipisci ut harum, vel obcaecati delectus labore necessitatibus molestiae tenetur fugit vero sed accusamus beatae.
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor fugit quisquam porro rem
+                            dolorem. Ipsum adipisci ut harum, vel obcaecati delectus labore necessitatibus molestiae
+                            tenetur fugit vero sed accusamus beatae.
                         </p>
                         <h4 class="font-bold mt-10">&mdash; Name of writter &mdash;</h4>
                     </div>
                     <div>
                         <p class="font-[Lora] text-2xl leading-loose ms-10 mt-10 text-gray-600">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor fugit quisquam porro rem dolorem. Ipsum adipisci ut harum, vel obcaecati delectus labore necessitatibus molestiae tenetur fugit vero sed accusamus beatae.
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor fugit quisquam porro rem
+                            dolorem. Ipsum adipisci ut harum, vel obcaecati delectus labore necessitatibus molestiae
+                            tenetur fugit vero sed accusamus beatae.
                         </p>
                         <h4 class="font-bold mt-10">&mdash; Name of writter &mdash;</h4>
                     </div>
                     <div>
                         <p class="font-[Lora] text-2xl leading-loose ms-10 mt-10 text-gray-600">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor fugit quisquam porro rem dolorem. Ipsum adipisci ut harum, vel obcaecati delectus labore necessitatibus molestiae tenetur fugit vero sed accusamus beatae.
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor fugit quisquam porro rem
+                            dolorem. Ipsum adipisci ut harum, vel obcaecati delectus labore necessitatibus molestiae
+                            tenetur fugit vero sed accusamus beatae.
                         </p>
                         <h4 class="font-bold mt-10">&mdash; Name of writter &mdash;</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--CONTACT-->
+        <section class="py-32 bg-gray-800">
+            <div class="max-w-7xl mx-auto">
+                <h4 class="uppercase text-green-500 text-center font-bold">contact us</h4>
+                <h1 class="text-center text-white text-5xl leading-snug font-semibold capitalize mt-4">Reach out for a
+                    new project or just<br> say hello</h1>
+                <div class="p-16 max-w-5xl mx-auto bg-gray-950 bg-opacity-50 mt-20">
+                    <div class="md:grid md:grid-cols-6 gap-10">
+                        <div class="col-span-4">
+                            <form action="#" method="post" enctype="multipart/form-data">
+                                <h4 class="uppercase text-white text-start font-bold">send me a message</h4>
+                                <input type="text" name="name" placeholder="Your Name"
+                                    class="w-full outline-none py-3 pb-5 bg-transparent border-b border-b-gray-700 mt-10" />
+                                <input type="text" name="email" placeholder="Your Email"
+                                    class="w-full outline-none py-3 pb-5 text-gray-700 bg-transparent border-b border-b-gray-700 mt-5" />
+                                <input type="text" name="subject" placeholder="Subject"
+                                    class="w-full outline-none py-3 pb-5 text-gray-700 bg-transparent border-b border-b-gray-700 mt-5" />
+                                <textarea placeholder="Message"
+                                    class="mt-5 bg-transparent w-full outline-none border-b border-b-gray-700"
+                                    rows="10"></textarea>
+                                <a href="#"
+                                    class="uppercase text-center w-full bg-green-500 block p-3 mt-5 font-bold text-white hover:bg-opacity-80 transition-all duration-150 ease-in-out">submit</a>
+                            </form>
+                        </div>
+                        <div class="hidden col-span-2 md:block">
+                            <h4 class="uppercase text-white text-start font-bold">contact us</h4>
+                            <div class="mt-10">
+                                <h4 class="uppercase text-green-500 text-start font-bold">my location</h4>
+                                <p class="text-gray-500 mt-5 text-lg leading-loose">
+                                    1600 Amphitheatre Parkway
+                                    Mountain View, CA<br>
+                                    94043 US
+                                </p>
+                            </div>
+                            <div class="mt-10">
+                                <h4 class="uppercase text-green-500 text-start font-bold">Email</h4>
+                                <a href="#" class="mt-5 text-gray-500 inline-block">contact@firoz.com</a>
+                                <a href="#" class="mt-2 text-gray-500 inline-block">contact@firoz.com</a>
+                            </div>
+                            <div class="mt-10">
+                                <h4 class="uppercase text-green-500 text-start font-bold">call me at</h4>
+                                <a href="#" class="mt-5 text-gray-500 inline-block">phone: +919876543210</a>
+                                <a href="#" class="mt-2 text-gray-500 inline-block">enquiry: +91932456878</a>
+                            </div>
+                            <div class="mt-10">
+                                <ul class="list-none">
+                                    <li class="inline-block">
+                                        <span>
+                                            <a href="#">
+                                                <i
+                                                    class="fa-brands fa-facebook-f text-white hover:text-blue-500 transition-all ease-in-out duration-150 text-2xl"></i>
+                                            </a>
+                                        </span>
+                                    </li>
+                                    <li class="inline-block">
+                                        <span>
+                                            <a href="#">
+                                                <i
+                                                    class="fa-brands fa-x-twitter text-white hover:text-blue-500 transition-all ease-in-out duration-150 text-2xl ms-4"></i>
+                                            </a>
+                                        </span>
+                                    </li>
+                                    <li class="inline-block">
+                                        <span>
+                                            <a href="#">
+                                                <i
+                                                    class="fa-brands fa-instagram text-white hover:text-blue-500 transition-all ease-in-out duration-150 text-2xl ms-4"></i>
+                                            </a>
+                                        </span>
+                                    </li>
+                                    <li class="inline-block">
+                                        <span>
+                                            <a href="#">
+                                                <i
+                                                    class="fa-brands fa-behance text-white hover:text-blue-500 transition-all ease-in-out duration-150 text-2xl ms-4"></i>
+                                            </a>
+                                        </span>
+                                    </li>
+                                    <li class="inline-block">
+                                        <span>
+                                            <a href="#">
+                                                <i
+                                                    class="fa-brands fa-dribbble text-white hover:text-blue-500 transition-all ease-in-out duration-150 text-2xl ms-4"></i>
+                                            </a>
+                                        </span>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -293,8 +396,8 @@
                 autoplay: true,
                 loop: true,
                 margin: 10,
-                autoplayTimeout:3000,
-                autoplayHoverPause:true,
+                autoplayTimeout: 3000,
+                autoplayHoverPause: true,
                 items: 1
             });
         });
