contat page contact information set all screensizes and added some margin for mobile screens

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                                     class="uppercase text-center w-full bg-green-500 block p-3 mt-5 font-bold text-white hover:bg-opacity-80 transition-all duration-150 ease-in-out">submit</a>
                             </form>
                         </div>
-                        <div class="hidden col-span-2 md:block">
+                        <div class="col-span-2 mt-10 md:mt-0">
                             <h4 class="uppercase text-white text-start font-bold">contact us</h4>
                             <div class="mt-10">
                                 <h4 class="uppercase text-green-500 text-start font-bold">my location</h4>
