footer created and insert dummy content

--- a/index.html
+++ b/index.html
@@ -387,6 +387,31 @@
                 </div>
             </div>
         </section>
+
+        <!--FOOTER-->
+        <section class="py-32 bg-black">
+            <div class="max-w-7xl mx-auto p-10">
+                <div class="md:grid md:grid-cols-2 gap-20">
+                    <div>
+                        <h3 class="text-start text-green-500 font-bold text-3xl">Firoz</h3>
+                        <p class="text-gray-700 text-lg leading-loose mt-10">
+                            Proin eget tortor risus. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Nulla porttitor accumsan tincidunt. Nulla porttitor accumsan tincidunt. Quaerat voluptas autem necessitatibus vitae aut.
+                        </p>
+                    </div>
+                    <div class="mt-20 md:mt-0">
+                        <h4 class="uppercase text-white text-start font-bold">quick access</h4>
+                        <p class="text-gray-700 text-lg leading-loose mt-10">
+                            Quia quo qui sed odit. Quaerat voluptas autem necessitatibus vitae aut non alias sed quia. Ut itaque enim optio ut excepturi deserunt iusto porro.
+                        </p>
+                        <a href="#" class="py-4 px-8 text-base hover:bg-opacity-80 duration-150 ease-in-out transition-all font-semibold bg-green-500 text-white mt-10 rounded-full capitalize inline-block">say hi on whatsapp &rarr;</a>
+                    </div>
+                </div>
+                <!--COPYRIGHT-->
+                <div class="text-center mt-20">
+                    <span class="text-gray-600">&copy; copyright 2023 | Designed by Team Moro</span>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
